--- a/index.ipynb
+++ b/index.ipynb
@@ -32,16 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compare 200x200 matrix-matrix multiplication speed\n",
     "import numpy as np\n",
     "\n",
+    "a = 200\n",
     "# Set up the variables\n",
-    "A = None\n",
-    "B = None"
+    "A = np.random.rand(a,a)\n",
+    "B = np.random.rand(a,a)"
    ]
   },
   {
@@ -61,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pure Python Time: None sec.\n"
+      "Pure Python Time: 252.453177623 sec.\n"
      ]
     }
    ],
@@ -76,12 +77,17 @@
     "import timeit\n",
     "\n",
     "# Start the timer\n",
-    "start = None\n",
+    "start = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in pure Python\n",
+    "mat = np.zeros((a,a))\n",
+    "for i in range(a):\n",
+    "    for j in range(a):\n",
+    "        for k in range(a):\n",
+    "            mat += A[i,j]*B[j,k]\n",
+    "    \n",
     "\n",
-    "\n",
-    "time_spent = None\n",
+    "time_spent = timeit.default_timer() - start\n",
     "\n",
     "print('Pure Python Time:', time_spent, 'sec.')"
    ]
@@ -96,26 +102,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy Time: None sec.\n"
+      "Numpy Time: 0.0364926459999424 sec.\n"
      ]
     }
    ],
    "source": [
     "# start the timer\n",
-    "start = None\n",
+    "start2 = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in numpy\n",
+    "C = A.dot(B)\n",
     "\n",
-    "\n",
-    "time_spent = None\n",
-    "print('Numpy Time:', time_spent, 'sec.')"
+    "time_spent2 =  timeit.default_timer() - start2\n",
+    "print('Numpy Time:', time_spent2, 'sec.')"
    ]
   },
   {
@@ -129,8 +135,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
-    "```"
+    "```Numpy is way faster than Python\n",
+    "\n",
+    "```It's also more intuitive in that the built in functions make it easier to set the code to do the calculation.  It looks much more like jsut regular math."
    ]
   },
   {
@@ -159,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
